--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.3.3",
     "core-js": "^3.8.3",
+    "node-sass": "^8.0.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
@@ -19,6 +20,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass-loader": "^13.2.0"
   }
 }
