--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "axios": "^1.3.3",
     "core-js": "^3.8.3",
     "node-sass": "^8.0.0",
